[package]
name = "cargo-advrunner"
version = "0.3.0"
edition = "2021"
description = "An advanced configurable cargo runner."
license = "MIT"
repository = "https://github.com/MOZGIII/cargo-advrunner"

[dependencies]
anyhow = "1"
duct = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.7"
