[package]
name = "cargo-advrunner"
version = "0.3.1"
edition = "2021"
description = "An advanced configurable cargo runner."
license = "MIT"
repository = "https://github.com/MOZGIII/cargo-advrunner"

[dependencies]
anyhow = "1"
duct = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
